--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="public/logo.png" type="image/x-icon" /> <!-- Cập nhật đường dẫn -->
+  <link rel="icon" href="./public/logo.png" type="image/x-icon" /> <!-- Cập nhật đường dẫn -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LYB Trang sức cao cấp</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script type="module" src="src/main.jsx"></script> <!-- Cập nhật đường dẫn -->
+  <script type="module" src="./src/main.jsx"></script> <!-- Cập nhật đường dẫn -->
 </body>
 
 </html>
